# BigNums

./: CMakeLists.txt  main.cpp
src/: BigDouble.cpp  BigDouble.h  BigInt.cpp  BigInt.h  BigNums.h  aliases.cpp  aliases.h  main.cpp  utils.cpp
src/Double/: arithmetic.cpp  compare.cpp  init.cpp  utils.cpp
src/Int/: arithmetic.cpp  compare.cpp  init.cpp  utils.cpp
